--- a/obstacles_styles.css
+++ b/obstacles_styles.css
@@ -13,7 +13,7 @@ body {
     position: absolute;
     top: 50px;
     font-size: 3em;
-    color: burlywood;
+    color: white;
     text-align: center;
 }
 
